@@ -82,7 +82,7 @@ CONVDECL (bool_matrix_to_double_matrix)
   return new octave_sparse_matrix (SparseMatrix (v.sparse_bool_matrix_value ()));
 }
 
-DEFDBLCONVFN (, sparse_bool_matrix, bool_array)
+DEFDBLCONVFN (OCTAVE_EMPTY_CPP_ARG, sparse_bool_matrix, bool_array)
 
 void
 install_sbm_sbm_ops (void)
